# d-core-cuda

./: .gitignore  CMakeLists.txt  experiments.txt  main.cpp  main.cu  main_.cu  main_dcore.cpp  main_practice.cu
dataset/: congress  digraph  digraph-binary  digraph-binary-g=1  digraph.decomp  graph.txt  wiki-vote.txt  wiki_vote-binary
nsys/: cudares.txt  nsys_temp.nsys-rep  nsys_temp.sqlite  profile.bat  view_profile.bat
results/: cudares.txt  parres.txt  res_digraph.txt  res_wiki-vote.txt
src/: common.cuh  common.h  cuda_memory.h  cuda_utils.cuh  graph.cpp  graph.h  graph_cpu.cpp  graph_cpu.h  graph_gen.cpp  graph_gen.h  graph_gpu.cu  graph_gpu.h  utils.h
src-dcore/: Graph_v2_test.cpp  Graph_v2_test.h  cmdline.h_
times_generous/: times_amazon.txt  times_email.txt  times_enwiki-2024.txt  times_hollywood-2009.txt  times_hollywood.txt  times_indochina.txt  times_live_journal.txt  times_pokec.txt  times_slashdot.txt  times_uk_2002.txt
times_less_generous/: times_amazon.txt  times_email.txt  times_enwiki-2024.txt  times_hollywood-2009.txt  times_hollywood.txt  times_indochina.txt  times_live_journal.txt  times_pokec.txt  times_slashdot.txt  times_uk_2002.txt
